# TSIS_LAB02

./: CMakeLists.txt  NOTE1.txt  README.md  RESULT.txt
include/: Addon.hpp  MyFunction.hpp  random_search.hpp
sources/: Addon.cpp  main.cpp  random_search.cpp
